[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/inventory_slot_background.png" type="Texture" id=1]
[ext_resource path="res://ui/inventory/InventorySlot.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/inventory_slot_background_hovered.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 3.73213 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="InventorySlot" type="CenterContainer"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotBackground" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotBackgroundHovered" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotBackgroundHovered"]
anims/FadeIn = SubResource( 1 )
